[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Menu/MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menu/SettingsMenu.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Menu/GameMenu.gd" type="Script" id=3]

[node name="GameMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="." instance=ExtResource( 1 )]
offset = Vector2( 600, 0 )
transform = Transform2D( 1, 0, 0, 1, 600, 0 )

[node name="SettingsMenu" parent="." instance=ExtResource( 2 )]
offset = Vector2( 600, 0 )
transform = Transform2D( 1, 0, 0, 1, 600, 0 )

[connection signal="play_pressed" from="MainMenu" to="." method="_on_MainMenu_play_pressed"]
[connection signal="settings_pressed" from="MainMenu" to="." method="_on_MainMenu_settings_pressed"]
[connection signal="back_pressed" from="SettingsMenu" to="." method="_on_SettingsMenu_back_pressed"]
[connection signal="sound_pressed" from="SettingsMenu" to="." method="_on_SettingsMenu_sound_pressed"]
